refactor: tag -> chip

--- a/components.html
+++ b/components.html
@@ -38,72 +38,16 @@
       <h2 class="text:xl" style="font-weight: 600;">Component Showcase</h2>
       
       <section class="flex:stack gap:sm">
-        <h3 class="text:md">Buttons</h3>
-        <div class="flex:cluster gap:sm">
-          <button>Primary</button>
-          <button class="sec">Secondary</button>
-          <button class="gho">Ghost</button>
-          <button class="wrn">Warning</button>
-          <button class="dgr">Danger</button>
-        </div>
-        <h4 class="text:sm">Outline Variants (:out suffix)</h4>
-        <div class="flex:cluster gap:sm">
-          <button class="pri out">Primary</button>
-          <button class="sec out">Secondary</button>
-          <button class="wrn out">Warning</button>
-          <button class="dgr out">Danger</button>
-        </div>
-        <div class="flex:cluster gap:sm">
-          <button class="gra">Gradient</button>
-          <button class="gla">Glass</button>
-        </div>
-        <div class="flex:cluster gap:sm">
-          <a class="btn" href="#">Link as Button</a>
-        </div>
-      </section>
-
-      <section class="flex:stack gap:sm">
-        <h3 class="text:md">Button Sizes</h3>
-        <div class="flex:cluster align:center gap:sm">
-          <button class="sm">Small</button>
-          <button>Default</button>
-          <button class="lg">Large</button>
-        </div>
-      </section>
-
-      <section class="flex:stack gap:sm">
-        <h3 class="text:md">Icon Buttons</h3>
-        <div class="flex:cluster align:center gap:sm">
-          <button class="icon-btn sm">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/></svg>
-          </button>
-          <button class="icon-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"/></svg>
-          </button>
-        </div>
-      </section>
-
-
-      <section class="flex:stack gap:sm">
-        <h3 class="text:md">Button States</h3>
-        <div class="flex:cluster gap:md">
-          <button aria-busy="true">Loading</button>
-          <button disabled>Disabled</button>
-        </div>
-      </section>
-
-
-      <section class="flex:stack gap:sm">
         <h3 class="text:md">Tags</h3>
         <div class="flex:cluster gap:sm">
-          <span class="tag">Default</span>
-          <span class="tag inf">Info</span>
-          <span class="tag suc">Success</span>
-          <span class="tag wrn">Warning</span>
-          <span class="tag dgr">Danger</span>
+          <span class="chip">Default</span>
+          <span class="chip:inf">Info</span>
+          <span class="chip:suc">Success</span>
+          <span class="chip:wrn">Warning</span>
+          <span class="chip:dgr">Danger</span>
         </div>
         <div class="flex:cluster gap:sm">
-          <span class="tag">Removable <span class="close">×</span></span>
+          <span class="chip">Removable <span class="close">×</span></span>
           <span class="tag inf">Info <span class="close">×</span></span>
           <span class="tag suc">Done <span class="close">×</span></span>
         </div>
