feat: fix tabs api to be tab:var-size modification

--- a/tabs.html
+++ b/tabs.html
@@ -108,12 +108,12 @@
           <h3 class="text:md">Full Width</h3>
           <p class="text:sm">Append <code>-full</code> to stretch tabs.</p>
           <div class="flex:stack gap:md" style="max-width: 400px;">
-            <div class="tabs:pri-full" data-signals:tab6="1">
+            <div class="tabs:pri full" data-signals:tab6="1">
               <button data-class:tab:active="$tab6===1" data-class:tab="$tab6!==1" data-on:click="$tab6=1">Tab1</button>
               <button data-class:tab:active="$tab6===2" data-class:tab="$tab6!==2" data-on:click="$tab6=2">Tab2</button>
               <button data-class:tab:active="$tab6===3" data-class:tab="$tab6!==3" data-on:click="$tab6=3">Tab3</button>
             </div>
-            <div class="tabs:sec-full" data-signals:tab7="1">
+            <div class="tabs:sec full" data-signals:tab7="1">
               <button data-class:tab:active="$tab7===1" data-class:tab="$tab7!==1" data-on:click="$tab7=1">Tab1</button>
               <button data-class:tab:active="$tab7===2" data-class:tab="$tab7!==2" data-on:click="$tab7=2">Tab2</button>
               <button data-class:tab:active="$tab7===3" data-class:tab="$tab7!==3" data-on:click="$tab7=3">Tab3</button>
@@ -202,7 +202,7 @@
 &lt;/div&gt;
 
 &lt;!-- Full width --&gt;
-&lt;div class="tabs:pri-full"&gt;
+&lt;div class="tabs:pri full"&gt;
   &lt;button class="tab:active"&gt;Tab1&lt;/button&gt;
   &lt;button class="tab"&gt;Tab2&lt;/button&gt;
   &lt;button class="tab"&gt;Tab3&lt;/button&gt;
