fix: remove old components page and update the buttons on the card page

--- a/cards.html
+++ b/cards.html
@@ -74,14 +74,14 @@
           <div class="card:alert">
             <h3>Information</h3>
             <p>This is an informational alert.</p>
-<button class="btn pri out sm">OK</button>
+<button class="btn:pri-sm out">OK</button>
           </div>
           <div class="card:alert">
             <h3>Confirm Action</h3>
             <p>Are you sure you want to proceed?</p>
             <div class="flex:cluster gap:xs">
-<button class="btn sec out sm">Cancel</button>
-              <button class="btn pri out sm">Confirm</button>
+<button class="btn:sec-sm out">Cancel</button>
+              <button class="btn:pri-sm out">Confirm</button>
             </div>
           </div>
         </div>
@@ -146,7 +146,7 @@
 &lt;div class="card:alert"&gt;
   &lt;h3&gt;Alert Title&lt;/h3&gt;
   &lt;p&gt;Alert message&lt;/p&gt;
-&lt;button class="btn pri out sm"&gt;OK&lt;/button&gt;
+&lt;button class="btn:pri-sm out"&gt;OK&lt;/button&gt;
 &lt;/div&gt;
 
 &lt;!-- Alert with multiple actions --&gt;
@@ -154,8 +154,8 @@
   &lt;h3&gt;Alert Title&lt;/h3&gt;
   &lt;p&gt;Alert message&lt;/p&gt;
   &lt;div class="flex:cluster gap:xs"&gt;
-&lt;button class="btn sec out sm"&gt;Cancel&lt;/button&gt;
-    &lt;button class="btn pri out sm"&gt;Confirm&lt;/button&gt;
+&lt;button class="btn:sec-sm out"&gt;Cancel&lt;/button&gt;
+    &lt;button class="btn:pri-sm out"&gt;Confirm&lt;/button&gt;
   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
       </section>
