fix: correct button / card api on hr.html demo

--- a/hr.html
+++ b/hr.html
@@ -57,12 +57,12 @@
       <section class="flex:stack gap:sm">
         <h3 class="text:md">Divider with Text</h3>
         <p class="text:sm">Use <code>.divider:text</code> to add centered text between two rules.</p>
-        <div class="card glass">
-          <button class="btn pri" style="width: 100%;">Sign in with Email</button>
+        <div class="card gla">
+          <button class="btn:pri" style="width: 100%;">Sign in with Email</button>
           <div class="divider:text">
             <hr><span>OR</span><hr>
           </div>
-          <button class="btn sec out" style="width: 100%;">Continue with Google</button>
+          <button class="btn:pri out" style="width: 100%;">Continue with Google</button>
         </div>
       </section>
 
